# simuladorMEFacademicoPotencial

./: .gitignore  01rodarVariosTransiente.sh  Comandos.txt  FPM.sh  LEIAME.txt  README.md  a.out  anotacoes.txt  cicloVerificaInstalacao.txt  comandosGit.txt  compararEstTansiente.sh  compilar.sh  configHypreIntel.sh  criarArqEntrada2D.sh  criarArqEntrada3D.sh  gnu-linux.mk  hist.txt  index.html  intel-linux.mk  limpar.sh  limparExpDir.sh  mkmf.sh  params.json  plot.py  plot01.py  plot2.py  plotPot.py  refTelaVarios.txt  rodarExperimento.sh  rodarVarios.sh  rodarVariosTransiente.sh  runTestes.sh  submeterAltix.sh  submeterVarios.sh  tela.txt  telaVarios.txt  ztest.f90
cpFontesMassi/: CMakeLists.txt  driverDS.F90  mInputReader.F90  utilitarios.F90
exp02x05/: campoPressao-00000000.vtu  coefSistEqAlgEsparsoF_SYM_SKYLINE.mtx  coefSistEqAlgEsparsoP.mtx  coefSistEqAlgEsparsoP.sol  coefSistEqAlgEsparsoP_SYM.sol  tela_GG0.txt  tela_GG0_1Thr.txt  tela_PI0.txt
exp030x030/: campoPressao-00000000.vtu  coefSistEqAlgEsparsoF_SYM_SKYLINE.mtx  coefSistEqAlgEsparsoP_SYM_SKYLINE.mtx  criarImagensMatA.sh  tela.txt  tela_GG0_1Thr.txt  tela__1Thr.txt
exp05x02/: campoPressao-00000000.vtu  coefSistEqAlgEsparsoF_SYM.sol  coefSistEqAlgEsparsoP_SYM.sol  matASistEqAlgEsparsoF.mtx  matASistEqAlgEsparsoP.mtx  matAp.ps  solverP.m  telaHYPRE.txt  tela_GG0.txt  tela_GG0_1Thr.txt  tela_GG0_1Threxp05x02_DS.txt  tela_GI0.txt  tela_GIf.txt  tela_HG0.txt  tela_HG0_1Thr.txt  tela_HI0.txt  tela_HI4.txt  tela_PI0.txt  tela_PI4.txt  tela_PIf.txt  tela__1Thr.txt  tela_zzz_1Thr.txt
exp05x02NM/: solverF.m  (+16 more)
(+201 files in other folders)
